Implementing services and controllers for teachers!